Use inline and intristic functions to improve the speed of CIE cache set-up. Bug 689153, customer 850.

DIFFERENCES:
None

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@8184 a1074d23-0009-0410-80fe-cf8c14f379e6